--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,25 @@ code {
 .project-tracker {
   font-family: "Brush Script MT";
 }
+
+.arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 70px solid transparent;
+  border-right: 70px solid transparent;
+
+  border-top: 70px solid rgba(255, 255, 255, 0.11);
+}
+
+.arrow-right {
+  width: 0;
+  height: 0;
+  border-top: 90px solid transparent;
+  border-bottom: 90px solid transparent;
+
+  border-left: 90px solid rgba(255, 255, 255, 0.13);
+}
+
+.circle-bottom {
+  bottom: -30px;
+}
